tetrate/tis0202/.chainsaw-test/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bad-resource-1
spec:
  host: non-existent-service.test-namespace.svc.cluster.local
