tetrate/tis0202/.chainsaw-test/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: existent-service
  namespace: test-namespace
spec:
  hosts:
  - "my-app.example.com"
  http:
  - route:
    - destination:
        host: "my-app-service.example-namespace.svc.cluster.local"
        subset: "v1"
