tetrate/tis0202/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-verify-destinationrule-hosts
spec:
  steps:
    - name: apply-desrule-policy
      try:
        - apply:
            file: ../verify-destinationrule-hosts.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-virtualservice-rbac
      try: 
        - apply:
            file: rbac.yaml
            
    - name: create-namespace
      try:
      - apply:
          file: ns.yaml

    - name: apply-virtualservice-resource
      try: 
        - apply:
            file: virtualservice.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
